--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "name": "work-chat",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
-  }
+	"name": "work-chat",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
+		"@next-auth/upstash-redis-adapter": "^3.0.4",
+		"@tailwindcss/forms": "^0.5.7",
+		"@upstash/redis": "^1.28.4",
+		"axios": "^1.6.8",
+		"class-variance-authority": "^0.7.0",
+		"lucide-react": "^0.358.0",
+		"next": "14.1.3",
+		"next-auth": "^4.24.7",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.51.1",
+		"react-hot-toast": "^2.4.1",
+		"tailwind-merge": "^2.2.2",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"cross-env": "^7.0.3",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.3",
+		"postcss": "^8",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
